# echo-web-mono

./: .dockerignore  .env.example  .eslintrc.cjs  .eslintrc.js  .gitignore  .npmrc  .nvmrc  .oxfmtrc.json  .oxlintrc.json  .prettierignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile.ars  README.md  SECURITY.md  TODO.txt  cenv.schema.json  cenv.schema.toml  check.sh  components.json  deno.json  docker-compose.yaml  env.local  fly.ars.toml  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  renovate.json  rust-toolchain.toml  sanity-typegen.json  sanity.config.ts  tailwind.config.ts  tsconfig.json  turbo.json
.github/: renovate.json  (+1 more)
apps/bee/: Cargo.toml  package.json
apps/bee/src/: config.rs  errors.rs  main.rs
apps/bee/src/http/: mod.rs  server.rs
apps/bee/src/http/extract/: admin.rs
apps/bee/src/http/routers/: comments.rs  happening.rs  mod.rs
apps/bee/src/models/: mod.rs
apps/bee/src/models/database/: comment.rs  mod.rs
apps/bee/src/models/domain/: access_request.rs  comment.rs  comment_reaction.rs  happening.rs  mod.rs  user.rs
apps/bee/src/models/domain/shared/: comment_id.rs  email.rs  mod.rs  post_id.rs  reaction_type.rs  user_id.rs
apps/bee/src/models/dto/: mod.rs
apps/bee/src/models/dto/request/: comment.rs  happening.rs  mod.rs  user.rs
apps/bee/src/repositories/: access_request.rs  comments.rs  happening.rs  mod.rs
apps/bee/src/repositories/adapters/: mod.rs
apps/bee/src/services/: README.md  auth.rs  comment.rs  happening.rs  mod.rs
apps/bee/src/storage/: postgres.rs
(+2740 files in other folders)
