[package]
name = "bee"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie-private", "cookie-signed"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["postgres", "chrono", "sqlite", "runtime-tokio", "migrate"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
